Adds unit tests for FindLoanUseCase and refactor unit test for ReactiveTest and HandlerTest
